redirect to google on search

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,6 +1,6 @@
 .HomePage {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .VideoPlayer {
@@ -33,7 +33,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
