--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -12,6 +12,7 @@
   flex: 1;
   padding: 0 1rem;
   font-family: "Roboto", sans-serif;
+  font-size: 1em;
   border: none;
   outline: none;
   background-color: inherit;
