--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -11,7 +11,7 @@
 .Input {
   flex: 1;
   padding: 0 1rem;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1em;
   border: none;
   outline: none;
