--- a/src/components/Weather/Weather.module.css
+++ b/src/components/Weather/Weather.module.css
@@ -42,7 +42,7 @@
   text-align: center;
   border-radius: 0.2rem;
   background-color: #677291;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .SuggestionsContainer {
