--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,5 +8,5 @@ body {
   min-width: 350px;
   min-height: 100vh;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
